trying to bug squash but the problem appears to be in node_modules

--- a/clicky-game/src/index.css
+++ b/clicky-game/src/index.css
@@ -6,9 +6,20 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%
+}
+html,
+body,
+#root,
+#root > div {
+  height: 100%;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+*{
+  box-sizing: border-box;
+  font-family: sans-serif
 }
